# PolicyDriftGate

./: .gitignore  README.md  pyproject.toml
src/PolicyDriftGate/: __init__.py  __main__.py  cli.py  ledger.py  samples.py  verifier.py
tests/: test_policy_drift_gate.py
